--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,7 @@ body, html {
   margin: 0 auto;
   display: block;
   text-align: center;
+  background: 0 url("images/white-wood.jpg") no-repeat cover;
 }
 
 .container, h1 {
@@ -14,26 +15,27 @@ body, html {
   padding: 10px;
   margin: 10px auto;
 }
-
 h4 {
   width: fit-content;
   display: inline-block;
   padding: 5px;
   margin: 20px 0 0 0;
 }
-
 .amiable {
   border: 1px solid #22aa44;
   box-shadow:  -1px 1px #22aa44, -2px 2px #22aa44, -3px 3px #22aa44, -4px 4px #22aa44, -5px 5px #22aa44;
   background-color: #44cc66;
-
 }
 
 .indifferent {
+  border: 1px solid #dddd22;
+  box-shadow:  -1px 1px #dddd22, -2px 2px #dddd22, -3px 3px #dddd22, -4px 4px #dddd22, -5px 5px #dddd22;
   background-color: #dddd22;
 }
 
 .dubious {
+  border: 1px solid #dd4444;
+  box-shadow:  -1px 1px #dd4444, -2px 2px #dd4444, -3px 3px #dd4444, -4px 4px #dd4444, -5px 5px #dd4444;
   background-color: #dd4444;
 }
 
@@ -41,16 +43,18 @@ h4 {
   width: 30%;
   display: inline-block;
 }
-
 .small {
   width: 100%;
   height: 100%;
+  border-style: solid;
 }
 
 .med {
   width: 203.5%;
+  border-style: solid;
 }
 
 .large {
   width: 303%;
+  border-style: solid;
 }
